internal/ui/static/css/common.css
/* ... */
.item-meta-icons :is(a:is(:focus, :hover), button:is(:focus, :hover)) {
    color: var(--header-link-color);
}

.item-meta li.if-content-download,
.item.download .item-meta li.if-content-download {
    display: none;
}

.item-meta li,
.item.with-inline-content .item-meta li.if-content-download {
    display: inline-block;
}

.item.downloaded .item-meta li.if-content-download {
    display: none;
}

.item-meta-info {
    font-size: 0.85em;
    margin-bottom: 5px;
}

.item-meta-info li {
    margin-bottom: 4px;
}

.item-meta-info li:not(:last-child):after {
    content: "|";
    color: var(--item-meta-li-color);
}

.item-meta-icons {
    margin-top: 5px;
}

.item-meta-icons li {
    margin-right: 8px;
    margin-top: 4px;
}

.item-meta-icons li:last-child {
    margin-right: 0;
}

.item-meta-icons li > :is(a, button) {
    color: #777;
    text-decoration: none;
    font-size: 0.8rem;
    border: none;
    background-color: transparent;
    cursor: pointer;
}

.item-meta-icons a span {
    text-decoration: underline;
}

.item-meta-icons button:active {
    translate: 1px 1px;
}

.page-button .htmx-indicator,
.page-button.htmx-request .caption {
    display: none;
    visibility: hidden;
}
.page-button.htmx-request .htmx-indicator {
    display: inline-block;
    visibility: visible;
}

.items {
    overflow-x: hidden;
    touch-action: pan-y;
}

.hide-read-items .item-status-read:not(.current-item) {
    display: none;
}

.entry-swipe {
    transition-property: transform;
    transition-duration: 0s;
    transition-timing-function: ease-out;
}

.scroll-down-go-next {
    height: 100vh;
    border-bottom: 1px dotted var(--hr-border-color);
    border-top: 1px dotted var(--hr-border-color);
    padding: var(--item-padding);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

/* Feeds list */
article.feed-parsing-error {
    background-color: var(--feed-parsing-error-background-color);
    border-style: var(--feed-parsing-error-border-style);
    border-color: var(--feed-parsing-error-border-color);
}

article.feed-has-unread {
    background-color: var(--feed-has-unread-background-color);
    border-style: var(--feed-has-unread-border-style);
    border-color: var(--feed-has-unread-border-color);
}

.parsing-error {
    font-size: 0.85em;
    margin-top: 2px;
    color: var(--parsing-error-color);
}

.parsing-error-count {
    cursor: pointer;
}

/* Categories list */
article.category-has-unread {
    background-color: var(--category-has-unread-background-color);
    border-style: var(--category-has-unread-border-style);
    border-color: var(--category-has-unread-border-color);
}

/* Icons */
#svg-icons {
    display: none;
    visibility: hidden;
}

.icon,
.icon-label {
    vertical-align: middle;
    display: inline-block;
    margin-right: 2px;
}

.icon {
    width: 1rem;
    height: 1rem;
}

.feed-icon {
    width: 1rem;
    height: 1rem;
    vertical-align: middle;
}

/* Entry view */
.entry header {
    padding-bottom: 5px;
    padding-inline: 5px;
    border-bottom: 1px dotted var(--entry-header-border-color);
}

.entry header h1 {
    font-size: 2.0em;
    line-height: 1.25em;
    margin: 5px 0 30px 0;
    overflow-wrap: break-word;
}

.entry header h1 a {
    text-decoration: none;
    color: var(--entry-header-title-link-color);
}

.entry header h1 a:hover,
.entry header h1 a:focus {
    color: #666;
}

.entry-actions {
    margin-bottom: 20px;
}

.entry-actions a span {
    text-decoration: underline;
}

.entry-actions li {
    display: inline-block;
    margin-right: 15px;
    line-height: 1.7em;
}

.entry-actions .icon-label {
    vertical-align: middle;
}

.entry-meta {
    font-size: 0.95em;
    margin: 0 0 20px;
    color: #666;
    overflow-wrap: break-word;
}

.entry-tags {
    margin-top: 1ex;
}

.entry-tags strong {
    font-weight: 600;
}

.entry-tags-list {
    display: inline flex;
    list-style-type: none;
}

.entry-tags-list li ~ li::before {
    content: ", ";
}

.entry-additional-tags {
    font-size: 0.8em;
    margin-top: 10px;
}

.entry-website img {
    vertical-align: top;
}

.entry-website a {
    color: #666;
    vertical-align: top;
    text-decoration: none;
}

.entry-website a:hover,
.entry-website a:focus {
    text-decoration: underline;
}

.entry-date {
    font-size: 0.65em;
    font-style: italic;
    color: #555;
}

.item .entry-content {
    border-top: 1px solid;
    border-bottom: 1px dotted;
    margin-top: 5px;
    padding-bottom: 1em;
}

.entry-content {
    padding-top: 1em;
    font-weight: var(--entry-content-font-weight);
    font-family: var(--entry-content-font-family);
    color: var(--entry-content-color);
    overflow-wrap: break-word;
}

.entry-content h1 {
    margin-block: 0.67em;
    font-size: 2em;
}

.entry-content h1, h2, h3, h4, h5, h6 {
    margin-top: 15px;
    margin-bottom: 10px;
}

.entry-content iframe,
.entry-content video,
.entry-content img {
    max-width: 100%;
}

.entry-content img {
    height: auto;
}

.entry-content figure {
    margin-top: 15px;
    margin-bottom: 15px;
}

.entry-content figure img {
    border: 1px solid #000;
}

.entry-content figcaption {
    font-size: smaller;
    font-style: italic;
    text-align: center;
}

.entry-content p {
    margin-top: 10px;
    margin-bottom: 15px;
}

.entry-content a {
    color: revert;
    overflow-wrap: break-word;
}

.entry-content dt {
    font-weight: 500;
    margin-top: 15px;
    color: #555;
}

.entry-content dd {
    margin-left: 15px;
    margin-top: 5px;
    padding-left: 20px;
    border-left: 3px solid #ddd;
    color: #777;
    font-weight: 300;
    line-height: 1.4em;
}

.entry-content blockquote {
    border-left: 4px solid #ddd;
    padding-left: 25px;
    margin-left: 20px;
    margin-top: 20px;
    margin-bottom: 20px;
    line-height: 1.4em;
    font-family: var(--entry-content-quote-font-family);
}
/* ... */

